--- a/package.json
+++ b/package.json
@@ -8,6 +8,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "astro-icon": "^0.8.0",
+    "@astrojs/mdx": "^0.15.2",
+    "@astrojs/partytown": "^1.0.3",
+    "@astrojs/tailwind": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "accessible-astro-components": "^2.0.0",
+    "astro-compress": "1.1.28",
+    "eslint": "^8.33.0",
+    "eslint-plugin-astro": "^0.23.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "svgo": "^2.8.0",
+    "tailwindcss": "^3.2.7",
+    "sass": "^1.49.9",
     "astro": "^2.3.2"
   }
 }
